completed html code

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="Loxurous Designs-02.jpg" alt="Luxerious Designs Logo">
+                <img src="Loxurous Designs-02.jpg" alt="Luxerious Designs Logo" width="100px" height="auto">
             </div>
             <ul class="nav">
                 <li><a href="#">About Us</a></li>
@@ -36,8 +36,45 @@
             <div>
                 <h2>Some random information</h2>
             </div>
-            
+            <div class="box">
+                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1158575634-612x612.jpeg" alt="istockphoto-1158575634-612x612" width="100px" height="auto">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1181691218-612x612.jpeg" alt="istockphoto-1181691218-612x612" width="100px" height="auto">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1226856019-612x612.jpeg" alt="istockphoto-1226856019-612x612" width="100px" height="auto">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box">
+                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1248145461-612x612.jpeg" alt="istockphoto-1248145461-612x612" width="100px" height="auto">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </section>
+
+    <section class="content2">
+        <div class="container">
+            <p><i>Luxerious Design is the best interior design brand in Lagos. They listened to me and transformed my space into a work of art.</i></p>
+            <p><strong>Thoress, goddess of thunder.</strong></p>
+        </div>
+    </section>
+
+    <section class="content3">
+        <div class="container">
+            <div>
+                <h3>Let's Transform Your Home Today</h3>
+                <p>Sign up for our newsletter by clicking the button right over there</p></div> 
+            <div><button>Sign up</button></div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Copyright &copy; Luxerious Designs 2022</p>
+        </div>
+    </footer>
 </body>
 </html>
