started and completed css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Landing Page</title>
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="Loxurous Designs-02.jpg" alt="Luxerious Designs Logo" width="100px" height="auto">
+                <img src="Loxurous Designs-02.jpg" alt="Luxerious Designs Logo" width="150px" height="auto">
             </div>
             <ul class="nav">
                 <li><a href="#">About Us</a></li>
@@ -25,17 +26,15 @@
             <div>
                 <h1>Luxerious Designs</h1>
                 <p>We believe in the power of design to transform lives, and we believe that every home deserves to be designed with love.</p>
-                <button>Call Us</button>
+                <button>Contact us</button>
             </div>
             <img src="interiors.jpeg" alt="interiors">
         </div>
     </header>
 
     <section class="content">
+        <h2>Some random information</h2>
         <div class="container">
-            <div>
-                <h2>Some random information</h2>
-            </div>
             <div class="box">
                 <img src="/Users/user/Desktop/Landing-Page/istockphoto-1158575634-612x612.jpeg" alt="istockphoto-1158575634-612x612" width="100px" height="auto">
                 <p>this is some subtext under an illustration or image</p>
@@ -49,7 +48,7 @@
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="box">
-                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1248145461-612x612.jpeg" alt="istockphoto-1248145461-612x612" width="100px" height="auto">
+                <img src="/Users/user/Desktop/Landing-Page/istockphoto-1248145461-612x612.jpeg" alt="istockphoto-1248145461-612x612" width="100px" height="70px">
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
@@ -58,18 +57,19 @@
     <section class="content2">
         <div class="container">
             <p><i>Luxerious Design is the best interior design brand in Lagos. They listened to me and transformed my space into a work of art.</i></p>
-            <p><strong>Thoress, goddess of thunder.</strong></p>
+            <p class="name"><strong>- Thoress, goddess of thunder.</strong></p>
         </div>
     </section>
 
     <section class="content3">
         <div class="container">
-            <div>
+            <div class="hero">
                 <h3>Let's Transform Your Home Today</h3>
                 <p>Sign up for our newsletter by clicking the button right over there</p></div> 
             <div><button>Sign up</button></div>
         </div>
     </section>
+
 
     <footer>
         <div class="container">
